--- a/index.html
+++ b/index.html
@@ -3,41 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <title>Julia Brand Portfolio</title>
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
   <style>
     /* Reset */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
       font-family: Arial, sans-serif;
       line-height: 1.6;
-      background: linear-gradient(135deg, #fdfbfb, #ebedee);
+      background-color: #f0f8ff; /* light blue background */
       color: #333;
     }
 
-    /* Navigation bar */
+    /* Navigation */
     header {
-      background: #87cefa; /* Light blue */
+      background: #ff1493; /* hot pink */
       color: #fff;
       padding: 1rem;
       position: sticky;
       top: 0;
       z-index: 1000;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+      text-align: center;
     }
 
-    header h1 {
-      font-size: 1.8rem;
-      margin-bottom: 0.5rem;
-      text-align: center;
-      color: #ff69b4; /* Hot pink */
-    }
+    header h1 { margin-bottom: 0.5rem; }
 
     nav {
       display: flex;
@@ -48,20 +40,11 @@
     nav a {
       color: #fff;
       text-decoration: none;
-      font-size: 1rem;
       font-weight: bold;
-      transition: color 0.2s, border-bottom 0.2s;
+      transition: color 0.2s;
     }
 
-    nav a:hover {
-      color: #ff69b4;
-      border-bottom: 2px solid #ff69b4;
-    }
-
-    nav a.active {
-      color: #ff69b4;
-      border-bottom: 2px solid #ff69b4;
-    }
+    nav a:hover { color: #f0f8ff; }
 
     /* Main content */
     main {
@@ -72,16 +55,13 @@
 
     section {
       margin-bottom: 2rem;
-      padding: 1.5rem;
+      padding: 1rem;
       background: #fff;
       border-radius: 8px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
 
-    h2 {
-      margin-bottom: 1rem;
-      color: #87cefa;
-    }
+    h2 { margin-bottom: 1rem; color: #444; }
 
     /* About section */
     .about {
@@ -92,11 +72,11 @@
     }
 
     .about img {
-      width: 160px;
-      height: 160px;
+      width: 150px;
+      height: 150px;
       border-radius: 50%;
       object-fit: cover;
-      border: 4px solid #87cefa;
+      border: 3px solid #ff1493;
     }
 
     /* Skills */
@@ -108,56 +88,28 @@
     }
 
     .skills li {
-      background: #ffe4ec;
+      background: #f0f8ff;
       padding: 0.8rem 1rem;
       border-radius: 8px;
       display: flex;
       align-items: center;
       gap: 0.5rem;
       font-size: 1rem;
-      transition: transform 0.2s, background 0.2s;
+      border: 1px solid #ff1493;
     }
 
-    .skills li:hover {
-      background: #ff69b4;
-      color: #fff;
-      transform: translateY(-3px);
-    }
-
-    .skills i {
-      font-size: 1.2rem;
-      color: #ff69b4;
-    }
+    .skills i { font-size: 1.2rem; color: #ff1493; }
 
     /* Projects */
-    .project {
-      margin-bottom: 1rem;
-      padding: 1rem;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      transition: transform 0.2s, box-shadow 0.2s;
-    }
+    .project { margin-bottom: 1rem; }
 
-    .project:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 12px rgba(0,0,0,0.2);
-    }
-
-    .project h3 {
-      margin-bottom: 0.5rem;
-      color: #ff69b4; /* Hot pink for project titles */
-    }
-
-    .project p {
-      line-height: 1.5;
-    }
+    .project h3 { margin-bottom: 0.5rem; }
 
     /* Footer */
     footer {
       text-align: center;
       padding: 1rem;
-      background: #87cefa;
+      background: #ff1493;
       color: #fff;
       margin-top: 2rem;
     }
@@ -168,7 +120,7 @@
       bottom: 20px;
       right: 20px;
       display: none;
-      background: #ff69b4;
+      background: #ff1493;
       color: #fff;
       border: none;
       border-radius: 50%;
@@ -180,17 +132,15 @@
       transition: background 0.3s;
     }
 
-    #backToTop:hover {
-      background: #e4579c;
-    }
+    #backToTop:hover { background: #ff69b4; }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>My Portfolio</h1>
+    <h1>Julia Brand Portfolio</h1>
     <nav>
-      <a href="#about" class="active">About Me</a>
+      <a href="#about">About Me</a>
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
     </nav>
@@ -199,7 +149,7 @@
   <main>
     <!-- About Me -->
     <section id="about" class="about">
-      <img src="img/IMG_3476.jpeg" alt="Picture of Leo">
+      <img src="img/IMG_3476.jpeg" alt="Picture of Julia">
       <div>
         <h2>About Me</h2>
         <p>Hello! My name is Julia Brand. I am a Computer Science student at the University of South Florida. I am passionate about creating clean, user-friendly websites and applications.</p>
@@ -225,12 +175,10 @@
     <!-- Projects -->
     <section id="projects">
       <h2>Projects</h2>
-
       <div class="project">
         <h3>PawsUp</h3>
-        <p>Founder of Paws Up. Paws Up is a mobile application that connects potential adopters with shelter animals through a swipe-based interface. Users can view pet profiles, express adoption interest, and help shelters showcase animals in a modern, engaging way.</p>
+        <p>Founder of PawsUp. Paws Up is a mobile application that connects potential adopters with shelter animals through a swipe-based interface. Users can view pet profiles, express adoption interest, and help shelters showcase animals in a modern, engaging way.</p>
       </div>
-
     </section>
   </main>
 
@@ -243,35 +191,15 @@
 
   <script>
     const backToTopButton = document.getElementById("backToTop");
-    const navLinks = document.querySelectorAll("nav a");
-    const sections = document.querySelectorAll("main section");
 
-    // Show "Back to Top" button when scrolling
     window.onscroll = function () {
       if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
         backToTopButton.style.display = "block";
       } else {
         backToTopButton.style.display = "none";
       }
-
-      // Highlight nav link of current section
-      let current = "";
-      sections.forEach(section => {
-        const sectionTop = section.offsetTop - 70;
-        if (pageYOffset >= sectionTop) {
-          current = section.getAttribute("id");
-        }
-      });
-
-      navLinks.forEach(link => {
-        link.classList.remove("active");
-        if (link.getAttribute("href") === "#" + current) {
-          link.classList.add("active");
-        }
-      });
     };
 
-    // Scroll back to top when clicked
     backToTopButton.addEventListener("click", () => {
       window.scrollTo({ top: 0, behavior: "smooth" });
     });
